# instr

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
apps/instructions/: admin.py  apps.py  models.py  services.py
apps/instructions/migrations/: 0001_initial.py
config/: settings.py
core/: config.py  logger.py
database/: connection.py  crud.py
logic/: executor.py
ui/: edit_view.py  views.py
ui/components/: log_window.py
